<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombreCursoDetalle"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/curso"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etNombreCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tematica"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/spinnerTematica"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvResumenCursoDetalle"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/descripcion"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etResumenCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFechaCursoDetalle"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/fecha"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etFechaCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDuracionCursoDetalle"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/duracion"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etDuracionCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumMaximoAsistentesDetalle"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/numAsist"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etMaxAsistentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="2dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btGuardarCambiosCurso"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:text="@string/guardarCambios"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btEliminarCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:text="@string/eliminarCurso"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>