<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVerCursosGenerales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:width="310dip"
                android:text="@string/verCursos"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVerCursosApuntados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:width="310dip"
                android:text="@string/verMisCursos"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/btVerCursosPublicados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:width="310dip"
                android:text="@string/verCursosPublicados"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>